Translate: Prevent translation memory suggestions from overflowing their containers.
Props SergeyBiryukov, nobnob.
Fixes #4968.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9495 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/plugins/wporg-gp-translation-suggestions/css/translation-suggestions.css
+++ b/wordpress.org/public_html/wp-content/plugins/wporg-gp-translation-suggestions/css/translation-suggestions.css
@@ -55,6 +55,7 @@
 	flex: 1;
 	color: #333;
 	white-space: pre-wrap;
+	word-break: break-word;
 }
 
 .translation-suggestion__translation-raw {
